Fix for overlapping drop downs in FF

--- a/public/layouts/dashboard/_toolbar.scss
+++ b/public/layouts/dashboard/_toolbar.scss
@@ -87,6 +87,7 @@ $dashboard-toolbar-separator: 1px solid $c-grey-400;
     -webkit-appearance: none;
     -moz-appearance: none;
     padding: 18px;
+    padding-bottom: 15px;
     padding-right: 34px;
     margin-left: 5px;
     outline: none;
